# mls-index

./: .gitignore  Justfile  README.md  build_geopackage.py  build_zipcode_geopkg.py  nar-mls-transform.jqt  pyproject.toml
mls_data/: Aberdeen BOARD OF REALTORS MLS - 37491.json  Adirondack Champlain Valley MLS - 37204.json  Aiken BOARD OF REALTORS - 37291.json  Alamance Multiple Listing Service - 37263.json  Alaska MLS Inc - 37729.json  Allegheny Highland ASSOCIATION OF REALTORS MLS - 37223.json  Allegheny Valley BOARD OF REALTORS - 37220.json  Altamaha Basin BOARD OF REALTORS - 37298.json  Amarillo ASSOCIATION OF REALTORS MLS - 37610.json  Amelia Island Nassau County ASSOCIATION OF REALTORS - 37320.json  Americus BOARD OF REALTORS - 37315.json  Ann Arbor Area BOARD OF REALTORS MLS - 37432.json  Arizona Regional Multiple Listing Service Inc ARMLS - 37648.json  Ashland Area BOARD OF REALTORS MLS - 37398.json  Ashland BOARD OF REALTORS MLS - 37413.json  Aspen Glenwood MLS - 37627.json  Athens Area ASSOCIATION OF REALTORS - 37301.json  Athens County BOARD OF REALTORS MLS - 37421.json  Austin Central Texas Realty Information Svc ACTRIS - 37603.json  Badlands BOARD OF REALTORS MLS - 37498.json  Bagnell Dam ASSOCIATION OF REALTORS MLS - 37513.json  Bakersfield ASSOCIATION OF REALTORS - 37685.json  Baldwin County ASSOCIATION OF REALTORS MLS - 37363.json  Batesville BOARD OF REALTORS MLS - 37555.json  Battle Creek Area ASSOCIATION OF REALTORS MLS - 37443.json  Bay Area Real Estate Information Service - 37700.json  Bay County REALTOR Association MLS - 37438.json  (+528 more)
