[tool.poetry]
name = "mlsindex"
version = "0.1.0"
description = "Index of MLS services"
authors = ["Loki Coyote <lokkju@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
tqdm = "^4.66.1"
loguru = "^0.7.2"
geopandas = "^0.14.1"
pyogrio = "^0.7.2"
dukpy = "^0.3.0"
pyjq = "^2.6.0"
matplotlib = "^3.8.2"
folium = "^0.15.1"
mapclassify = "^2.6.1"
jsonlines = "^4.0.0"
pandarallel = "^1.6.5"
contextily = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
